WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240522
[GTK] AX: Accessibility events missing for browser tab's contents when nothing is listening when page loads
https://bugs.webkit.org/show_bug.cgi?id=240522
Summary
[GTK] AX: Accessibility events missing for browser tab's contents when nothin...
Joanmarie Diggs
Reported
2022-05-17 09:10:03 PDT
Created
attachment 459502
[details]
accessible-event listener Steps to reproduce: 1. Launch Epiphany using WebKitGtk 2.36 (Gtk 3). 2. Load a page (I'm using
https://en.wikipedia.org/wiki/Main_Page
) 3. Launch the attached pyatspi accessible-event listener in a terminal 4. Tab among the focusable elements on the loaded page Expected results: focus events would by logged in the terminal. Actual results: focus events are not logged in the terminal. Notes: * If you swap steps 2 and 3 above, the problem doesn't occur. * If you create a new tab and load the same page while the listener is still running, the problem doesn't occur. * If you reload the page of the initial tab, events are still missing. * If you follow links in the page of the initial tab (i.e. causing new pages to be loaded in that same tab), events are still missing.
Attachments
accessible-event listener
(257 bytes, text/x-python)
2022-05-17 09:10 PDT
,
Joanmarie Diggs
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-17 09:10:13 PDT
<
rdar://problem/93428704
>
Joanmarie Diggs
Comment 2
2022-05-17 09:51:44 PDT
(In reply to Joanmarie Diggs from
comment #0
)
> * If you swap steps 2 and 3 above, the problem doesn't occur.
Edit: It doesn't occur for the event(s) originally being listened to. Example: Launching a new listener that listens not only for focus events, but also for caret-moved events. Only focus events will be emitted by that original page tab's document, because at the time that page tab's content was loaded, caret-moved events were not being listened to.
Georges Basile Stavracas Neto
Comment 3
2024-05-24 04:52:31 PDT
***
Bug 273944
has been marked as a duplicate of this bug. ***
Georges Basile Stavracas Neto
Comment 4
2024-05-24 07:40:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29052
EWS
Comment 5
2024-07-09 05:42:40 PDT
Committed
280770@main
(e949df8b32a3): <
https://commits.webkit.org/280770@main
> Reviewed commits have been landed. Closing PR #29052 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug