Source/WebKit/UIProcess/Launcher/glib/XDGDBusProxy.cpp
@@ -112,6 +112,8 @@ std::optional<CString> XDGDBusProxy::accessibilityProxy(const char* baseDirector
         WTFMove(dbusAddress), m_accessibilityProxyPath,
         "--filter",
         "--sloppy-names",
+        "--broadcast=org.a11y.atspi.Registry.EventListenerRegistered=@/org/a11y/atspi/registry",
+        "--broadcast=org.a11y.atspi.Registry.EventListenerDeregistered=@/org/a11y/atspi/registry",
         "--call=org.a11y.atspi.Registry=org.a11y.atspi.Socket.Embed@/org/a11y/atspi/accessible/root",
         "--call=org.a11y.atspi.Registry=org.a11y.atspi.Socket.Unembed@/org/a11y/atspi/accessible/root",
         "--call=org.a11y.atspi.Registry=org.a11y.atspi.Registry.GetRegisteredEvents@/org/a11y/atspi/registry",
